--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "grunt-wiredep": "latest",
         "grunt-include-source": "latest",
         "grunt-contrib-watch": "~0.6.1",
-        "grunt-contrib-connect": "~0.8.0"
+        "grunt-contrib-connect": "~0.8.0",
+        "grunt-contrib-less": "latest",
+        "grunt-less-imports": "latest"
     }
 }
 
