--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "grunt-contrib-connect": "~0.8.0",
         "grunt-contrib-less": "latest",
         "grunt-less-imports": "latest",
+        "grunt-legacy-util": "latest",
         "coffee-script": "~1.6.3"
     }
 }
