--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "grunt-less-imports": "latest",
         "grunt-legacy-util": "latest",
         "grunt-legacy-log": "latest",
-        "coffee-script": "~1.6.3"
+        "coffee-script": "~1.6.3",
+        "simple-text-parser": "latest",
+        "change-case": "latest"
     }
 }
 
